feat: downgrade to Java 8/Spring Boot 2.7 + CSV encoding fix + dynamic item form
- Downgrade from Java 17/Spring Boot 3.4 to Java 8/Spring Boot 2.7.18
- Change jakarta.* to javax.* namespace for Servlet API
- Replace Map.of() with Java 8 compatible collections
- Use MySQL Connector/J 5.1 with com.mysql.jdbc.Driver
- Fix utf8mb3 to utf8 in SQL schema for MySQL 5.7 compatibility
- Add CSV import encoding auto-detection (UTF-8 BOM / UTF-8 / GBK)
- Add CSV template download button in student management
- Rewrite item form with dynamic UI per question type (single choice
  shows options+radio, multiple choice shows options+checkbox, true/false
  shows correct/incorrect radio, fill-in shows textarea)
- Load question types from t_question_type table dynamically

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>